# rust_practice

./: Cargo.toml  readme.md
src/: main.rs  std_imports.rs
